--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -10,17 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+    - name: Checkout repo
+      uses: actions/checkout@v2
 
-      - name: Setup Python 3.x
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.10"
+    - name: Setup Python 3.x
+      uses: actions/setup-python@v2
+      with: # you can also use with:
+        python-version: "3.10"
       
-      - name: Install dependencies
-        run: |
-         python -m pip install --upgrade pip
-         pip install ansible boto3 requests
-         ansible-galaxy collection install amazon.aws
-         ansible-galaxy collection install community.docker --force
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install ansible boto3 requests
+        ansible-galaxy collection install amazon.aws
+        ansible-galaxy collection install community.docker --force
