--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -25,3 +25,21 @@ jobs:
         pip install ansible boto3 requests
         ansible-galaxy collection install amazon.aws
         ansible-galaxy collection install community.docker --force
+    
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-south-1
+    
+    - name: Create SSH Key file
+      run: |
+       mkdir -p ~/.ssh
+       echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/ec2_temp.pem
+       chmod 600 ~/.ssh/ec2_temp.pem
+       
+    - name: Debug SSH key
+      run: ls -l ~/.ssh/ec2_temp.pem
+    
+    
