Invoking the playbook from pipeline workflow

--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -41,5 +41,16 @@ jobs:
        
     - name: Debug SSH key
       run: ls -l ~/.ssh/ec2_temp.pem
+
+    - name: Run Ansible Playbook
+      run: |
+       ansible-playbook ./Ansible/playbooks/configure_provision_ec2_server.yml \
+       -e "ec2_ssh_key_path=~/.ssh/ec2_temp.pem"
+      
+      env:
+       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+       EC2_SSH_KEY_PATH: ~/.ssh/ec2_temp.pem
+       ANSIBLE_HOST_KEY_CHECKING: false
     
     
