Creating roles for common ec2 instances

--- a/Ansible/playbooks/roles/ec2_launch/tasks/main.yml
+++ b/Ansible/playbooks/roles/ec2_launch/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Adding SSH access to a security group
   amazon.aws.ec2_group: 
-    name: default
+    name: Nikhil
     description: Security group for EC2 instances
     region: ap-south-1
     rules: 
