writing common role for pushing frontend and backend code to the remote server

--- a/Ansible/playbooks/configure_provision_ec2_server.yml
+++ b/Ansible/playbooks/configure_provision_ec2_server.yml
@@ -4,4 +4,11 @@
   roles:
     - ec2_launch
 
+
+- name: Configuration of ec2 instances
+  hosts: launched_ec2_instances
+  gather_facts: true
+  roles:
+    - common
+
     
