--- a/Ansible/playbooks/roles/ec2_launch/tasks/main.yml
+++ b/Ansible/playbooks/roles/ec2_launch/tasks/main.yml
@@ -42,3 +42,27 @@
     count: 1
     security_group: "{{ security_group.group_id }}"
   register: ec2 
+
+- name: Wait for instance to be ready 
+  wait_for:
+    host: "{{ ec2.instances[0].public_dns_name }}" 
+    port: 22
+    delay: 30
+    timeout: 300
+    state: started
+  when: ec2.instances is defined and ec2.instances | length > 0
+
+- name: Add the EC2 instance to the inventory dynamically 
+  add_host:
+    name: "{{ ec2.instances[0].public_dns_name }}"
+    groups: launched_ec2_instances
+    ansible_ssh_private_key_file: "{{ EC2_SSH_KEY_PATH }}"
+    ansible_user: ec2-user
+
+- name: Debug SSH Key Path
+  debug:
+    var: EC2_SSH_KEY_PATH
+
+- name: Debug dynamic inventory
+  debug:
+    var: groups['launched_ec2_instances']
