--- a/Ansible/playbooks/roles/ec2_launch/vars/main.yml
+++ b/Ansible/playbooks/roles/ec2_launch/vars/main.yml
@@ -1,5 +1,7 @@
 ---
-
+#SPDX-License-Identifier: MIT-0
+---
+# vars file for ec2_launch
 aws_region: ap-south-1
 ec2_instance_type: t3.micro
 ec2_ami_id: ami-0fa3fe0fa7920f68e
