--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -11,46 +11,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Setup Python 3.x
-      uses: actions/setup-python@v2
-      with: # you can also use with:
-        python-version: "3.10"
+      - name: Setup Python 3.x
+        uses: actions/setup-python@v4
+        with: # you can also use with:
+          python-version: "3.10"
       
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install ansible boto3 requests
-        ansible-galaxy collection install amazon.aws
-        ansible-galaxy collection install community.docker --force
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ansible boto3 requests
+          ansible-galaxy collection install amazon.aws
+          ansible-galaxy collection install community.docker --force
     
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_ACCESS_KEY }}
-        aws-region: ap-south-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
     
-    - name: Create SSH Key file
-      run: |
-       mkdir -p ~/.ssh
-       echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/ec2_temp.pem
-       chmod 600 ~/.ssh/ec2_temp.pem
+      - name: Create SSH Key file
+        run: |
+         mkdir -p ~/.ssh
+         echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/ec2_temp.pem
+         chmod 600 ~/.ssh/ec2_temp.pem
        
-    - name: Debug SSH key
-      run: ls -l ~/.ssh/ec2_temp.pem
+      - name: Debug SSH key
+        run: ls -l ~/.ssh/ec2_temp.pem
 
-    - name: Run Ansible Playbook
-      run: |
-       ansible-playbook .C:Users/user/Desktop/Developer/Software_Testing/todoCiCd/Ansible/playbooks/configure_provision_ec2_server.yml \
-       -e "ec2_ssh_key_path=~/.ssh/ec2_temp.pem"
+      - name: Run Ansible Playbook
+        run: |
+         ansible-playbook -i "localhost," -c local ./Ansible/playbooks/configure_provision_ec2_server.yml \
+         -e "EC2_SSH_KEY_PATH=~/.ssh/ec2_temp.pem" -vvv
       
-      env:
-       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-       EC2_SSH_KEY_PATH: ~/.ssh/ec2_temp.pem
-       ANSIBLE_HOST_KEY_CHECKING: false
+        env:
+         ANSIBLE_HOST_KEY_CHECKING: false
     
     
